# Archivist-Agent

./: # Beyond Prohibition Why Constituti.txt  # The Moral Imperative Why Waiting.txt  # User Drift Scoring System (UDSS).txt  ## User Drift Scoring System (UDS).txt  .act-prompt.txt  .gitignore  .session-lock  .session-mode  600K_DISTRIBUTED_ARCHITECTURE.md  AGENTS.md  AUTHORITY_SELF_RESOLUTION_PARADOX.md  Alright—this was a much more intere.txt  Architecture Review Checklist.txt  BOOTSTRAP.md  CAISC_2026_ABSTRACT.md  CAISC_2026_PAPER_OUTLINE.md  CATASTROPHIC_DESYNC_TEST_PROTOCOL.md  CHECKPOINTS.md  CLAUDE.md  COLD_START_DRILL_REPORT_2026-04-17.md  COMPACT_CONTEXT_HANDOFF.md  CONFLICTING_TRUTH_DRILL_REPORT.md  CONTINUITY_REGISTRY.json  CONTINUITY_SPEC.md  COORDINATION_GAP_ANALYSIS.md  COVENANT.md  CPS_ENFORCEMENT.md  CRASH_RECOVERY_REPORT.md  CRASH_RECOVERY_TEST_PROTOCOL.md  CRITICAL_FIX_LOG_2026-04-17.md  CROSS_LANE_GIT_PROTOCOL.md  CROSS_LANE_SYNC_SPEC.md  Cargo.toml  Constraint-aware Error Handling & R.txt  DECISION_PHASE4.2_MONITORING_ALERTING.md  DECISION_PHASE4.3_ASYMMETRIC_ATTESTATION.md  DECISION_PHASE4_CONTINUITY_VERIFICATION_STANDARD.md  DECISION_PRODUCTION_READY.md  DECISION_QUEUE_CONSUMER_PHASE4.1.md  DELIBERATE_ENSEMBLE_LIBRARY_INDEX.md  (+71 more)
.artifacts/: ADVERSARIAL_TRANSCRIPT_TEST_PROTOCOL.md  (+47 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build_index.rs  build_registry.rs  classification.rs  constants.rs  constitution.rs  cps_check.rs  generate_handoff.rs  global_shim.rs  lib.rs  main.rs  safety.rs  scan_tree.rs  summarize_folder.rs  test_env.rs
(+510 files in other folders)
